--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -39,10 +39,10 @@
         <hr class="my-8 border-t border-gray-300" />
     </main>
 
-    {% for blog in blogs %}
+    <!-- {% for blog in blogs %}
         <div>
             {{blog.content | safe}}
         </div>
-    {% endfor %}
+    {% endfor %} -->
     
 {% endblock %}
