--- a/adminv2/templates/adminv2/listing/partials/listing-items.html
+++ b/adminv2/templates/adminv2/listing/partials/listing-items.html
@@ -39,7 +39,8 @@
                     <button 
                         class="toggle-listing-btn cursor-pointer {% if result.is_listed %} text-red-500 hover:text-red-700 {% else %} text-green-500 hover:text-green-700 {% endif %} "
                         data-listing-id="{{ result.id }}"
-                        data-is-listed="{{ result.is_listed }}">
+                        data-is-listed="{{ result.is_listed }}"
+                        onclick="changeListingStatus(event, {{ result.id }})">
                         {% if result.is_listed %}
                             Unlist
                         {% else %}
@@ -47,11 +48,15 @@
                         {% endif %}
                     </button>
                     {% if request.user.is_superuser %}
+                        <button data-id="{{ result.id }}" onclick="openDeleteModal(event)" class="btn primary-btn bg-red-600 hover:bg-red-800">Delete</button>
+                    {% endif %}
+
+                    <!-- {% if request.user.is_superuser %}
                         <form action="{% url 'adminv2:delete-listing' listing_id=result.id %}" method="POST">
                             {% csrf_token %}
                             <button type="submit">Delete</button>
                         </form>
-                    {% endif %}
+                    {% endif %} -->
                 </td>
             </tr>
             {% endfor %}
