--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -117,6 +117,7 @@
     <!-- Stats and Partner Section -->
     {% component "stats_partner" %} {% endcomponent %}
 
+    {% if testimonials %}
     <section class="testimonial responsive-padding relative bg-repeat py-8 bg-[100px] text-white" style="background-image: url({% static 'images/pattern4.svg' %}); background-color:blue;" data-aos="fade-up">
         <!-- overlay -->
         <div class="absolute inset-0"></div>
@@ -124,44 +125,22 @@
         <div class="relative z-10 flex flex-col gap-7 items-center">
             <h3 class="text-4xl font-semibold">Listen to our Trusted Clients <span class="text-red-600 fa fa-heart"></span></h3>
             <div class="card-container flex flex-col md:flex-row md:flex-wrap justify-center gap-6 *:bg-white *:text-gray-700 *:py-6 *:px-4 *:w-full *:md:w-72 *:rounded-xl *:shadow-[0px_4px_4px_0px_rgba(0,0,0,0.25)] *:inline-flex *:flex-col *:items-start *:gap-4 *:overflow-hidden">
+                {% for testimonial in testimonials %}
                 <div class="card">
                     <img src="{% static 'images/quote-svgrepo-com.svg' %}" width="20" class="w-14 h-14">
                     <div class="body">
-                        I'd always dreamed of living and working abroad. Eaglespoint's expert guidance made it possible. They helped me navigate the Permanent Residence process, ensuring a flawless application. I highly recommend Eaglespoint to anyone seeking to relocate abroad. Their professionalism and expertise are unmatched. Thank you, Eaglespoint, for making my dream a reality!
+                        {{ testimonial.message }}
                     </div>
                     <div>
                         <img>
-                        <span class="border-b-1 border-gray-800 uppercase text-gray-950 font-semibold">Mr. Gospel</span>
+                        <span class="border-b-1 border-gray-800 uppercase text-gray-950 font-semibold">{{ testimonial.name }}</span>
                     </div>
                 </div>
-
-                <div class="card">
-                    <img src="{% static 'images/quote-svgrepo-com.svg' %}" width="20" class="w-14 h-14">
-                    <div class="body">
-                        I'm forever grateful to Eaglespoint Horizon Limited for guiding me through my international education journey. From securing admission to studying abroad, graduating, and now working as a lecturer, Eaglespoint has been an invaluable partner. Their competence, efficiency, and dedication to customer satisfaction are unparalleled. I highly recommend Eaglespoint to anyone seeking to study abroad or relocate internationally. They truly helped me achieve my dreams!
-                    </div>
-                    <div>
-                        <img>
-                        <span class="border-b-1 border-gray-800 uppercase text-gray-950 font-semibold">Mr. Bethel</span>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <img src="{% static 'images/quote-svgrepo-com.svg' %}" width="20" class="w-14 h-14">
-                    <div class="body">
-                        I'm forever grateful to Eaglespoint for making my study abroad dreams a reality! Their guidance and support throughout the application and visa process were invaluable. I'm now proudly holding a degree from a prestigious international university, and I couldn't have done it without Eaglespoint's expertise. Thank you for helping me soar to new heights!
-                    </div>
-                    <div>
-                        <img>
-                        <span class="border-b-1 border-gray-800 uppercase text-gray-950 font-semibold">Mr. Elle</span>
-                    </div>
-                </div>
-    
-                
+                {% endfor %} 
             </div>
         </div>
-
     </section>
+    {% endif %}
 
     <section class="responsive-padding flex flex-col gap-7" data-aos="fade-up">
         <h2 class="text-4xl font-semibold">Stay Informed with Our Blog</h2>
