--- a/adminv2/templates/adminv2/cms/partials/new-testimonial-form.html
+++ b/adminv2/templates/adminv2/cms/partials/new-testimonial-form.html
@@ -1,4 +1,4 @@
-<form method="post" class="" onsubmit="submitForm(event)">
+<form method="post" action="{% url 'cmscontent:create-testimonial'%}" class="" onsubmit="addTestimonial(event)">
     <div class="flex flex-col gap-3 lg:gap-4">
         <div>
             <label for="id_name" class="label-primary">Name</label>
@@ -16,7 +16,7 @@
 
         <div>
             <label for="id_message" class="label-primary">Message</label>
-            <textarea class="input-primary" name="message" required id="id_message"></textarea>
+            <textarea class="input-primary" name="message" required id="id_message" rows=6></textarea>
         </div>
 
         <div>
@@ -24,6 +24,10 @@
                 <input type="checkbox" name="is_active" value="1">
                 Is Active
             </label>
+        </div>
+
+        <div class="flex gap-x-2 justify-end md:flex-row">
+            <button class="btn primary-btn w-max" type="submit">Add Testimonial</button>
         </div>
 
     </div>
